[package]
name = "copp_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "mandelbread"
harness = false

[profile.release]
# or "z"
opt-level = 3
debug = true

[dev-dependencies]
criterion = "0.5.1"

[features]
default = ["unsafe"]
unsafe = []
metrics = []
